--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Añadir ruta del paquete src al PYTHONPATH
+      run: |
+        export PYTHONPATH=$PYTHONPATH:${GITHUB_WORKSPACE}/src
     - name: Lint amb pylint
       run: |
         # stop the build if there are Python syntax errors or undefined names
